обновил апи слегка рефакторил room_photo.py
